Property change (#14)
